--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,24 +21,13 @@ jobs:
       - name: Install Deno
         uses: denoland/setup-deno@v2
         with:
-          deno-version: v2.x
+          deno-version: v1.x
 
-      - name: Install Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: lts/*
-
-      - name: Install step
-        run: "npm install"
-
-      - name: Build step
-        run: "npm run dev"
+      - name: Run Deno Task (Build)
+        run: deno task start
 
       - name: Upload to Deno Deploy
         uses: denoland/deployctl@v1
         with:
           project: "vds"
-          entrypoint: "https://deno.land/std@0.217.0/http/file_server.ts"
-          root: "dist"
-          
-          
+          entrypoint: "main.ts"
