--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
           deno-version: v1.x
 
       - name: Run Deno Task (Build)
-        run: deno task build
+        run: deno task dev
 
       - name: Upload to Deno Deploy
         uses: denoland/deployctl@v1
